<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Nibbles</string>
    
    <string name="pref_continue">Continue</string>
    <string name="pref_new_game">New Game</string>
    
    <string name="pref_speed">Speed</string>
    <string name="pref_speed_default">20</string>
    <string name="pref_human_players">Human Players</string>
    <string name="pref_adversaries">AI Adversaries</string>
    <string name="pref_sound">Sound Effects</string>
    <string name="pref_monochrome">Monochrome Colors</string>
    <string name="pref_start">Start!</string>
</resources>